--- a/Lab5/Views/Account/Profile.cshtml
+++ b/Lab5/Views/Account/Profile.cshtml
@@ -2,7 +2,14 @@
 @{
     ViewData["Title"] = "User Profile";
 }
+<style>
+    .data-container{
+        display:flex;
+        flex-direction: column;
+        margin-bottom: 30px;
+    }
 
+</style>
 <div class="row">
     <div class="col-md-12">
         <div class="row">
@@ -13,11 +20,27 @@
                      alt="" class="img-rounded img-responsive" />
             </div>
             <div class="col-md-4">
-                <h3>@Model.Name</h3>
-                <p>
-                    <i class="glyphicon glyphicon-envelope"></i> @Model.EmailAddress
-                </p>
+                <div class="data-container">
+                    <h3>Full Name:</h3>
+                    <h3>@Model.Name</h3>
+                </div>
+                <div class="data-container">
+                    <h3>Username:</h3>
+                    <h3>@Model.Username</h3>
+                </div>
+                
             </div>
-        </div>
+             <div class="col-md-4">
+                <div class="data-container">
+                    <h3>Email Address:</h3>
+                    <h3>@Model.EmailAddress</h3>
+                </div>
+                <div class="data-container">
+                    <h3>Phone Number:</h3>
+                    <h3>@Model.PhoneNumber</h3>
+                </div>
+                
+            </div>
+        
     </div>
 </div>
