--- a/Lab6/Views/Shared/_Layout.cshtml
+++ b/Lab6/Views/Shared/_Layout.cshtml
@@ -36,6 +36,10 @@
                         <li><a asp-area="" asp-controller="Lab" asp-action="Lab1">Lab1</a></li>
                         <li><a asp-area="" asp-controller="Lab" asp-action="Lab2">Lab2</a></li>
                         <li><a asp-area="" asp-controller="Lab" asp-action="Lab3">Lab3</a></li>
+                        <li><a asp-area="" asp-controller="DataViews" asp-action="Staff">Staff Data</a></li>
+                        <li><a asp-area="" asp-controller="DataViews" asp-action="Customers">Customers Data</a></li>
+                        <li><a asp-area="" asp-controller="DataViews" asp-action="Contracts">Contracts Data</a></li>
+                        <li><a asp-area="" asp-controller="Time" asp-action="Index">Time</a></li>
                     }
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
