added search page

--- a/Lab6/Views/Shared/_Layout.cshtml
+++ b/Lab6/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
                         <li><a asp-area="" asp-controller="DataViews" asp-action="Customers">Customers Data</a></li>
                         <li><a asp-area="" asp-controller="DataViews" asp-action="Contracts">Contracts Data</a></li>
                         <li><a asp-area="" asp-controller="Time" asp-action="Index">Time</a></li>
+                        <li><a asp-area="" asp-controller="DataViews" asp-action="SearchContracts">Search Contracts</a></li>
                     }
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
