added api v1/v2 version to staffcontroller

--- a/Lab7/Views/Shared/_Layout.cshtml
+++ b/Lab7/Views/Shared/_Layout.cshtml
@@ -36,7 +36,8 @@
                         <li><a asp-area="" asp-controller="Lab" asp-action="Lab1">Lab1</a></li>
                         <li><a asp-area="" asp-controller="Lab" asp-action="Lab2">Lab2</a></li>
                         <li><a asp-area="" asp-controller="Lab" asp-action="Lab3">Lab3</a></li>
-                        <li><a asp-area="" asp-controller="DataViews" asp-action="Staff">Staff Data</a></li>
+                        <li><a asp-area="" asp-controller="DataViews" asp-action="StaffV1">Staff Data v1</a></li>
+                        <li><a asp-area="" asp-controller="DataViews" asp-action="StaffV2">Staff Data v2</a></li>
                         <li><a asp-area="" asp-controller="DataViews" asp-action="Customers">Customers Data</a></li>
                         <li><a asp-area="" asp-controller="DataViews" asp-action="Contracts">Contracts Data</a></li>
                         <li><a asp-area="" asp-controller="Time" asp-action="Index">Time</a></li>
