--- a/Lab7/Views/DataViews/Staff.cshtml
+++ b/Lab7/Views/DataViews/Staff.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Lab7.Database.Models.Staff>;
+﻿@model IEnumerable<dynamic>
 @{
     ViewData["Title"] = "Staff Page";
 }
@@ -6,12 +6,11 @@
 <div class="row">
     <div class="col-md-12">
         <h2>Staff Data</h2>
-
         <div class="form-group">
-            <label for="viewType">Виберіть тип виведення: </label>
+            <label for="viewType">Select View Type:</label>
             <select id="viewType" class="form-control" onchange="changeViewType()">
-                <option value="table" selected>Таблично</option>
-                <option value="list">По-елементно</option>
+                <option value="table" selected>Table</option>
+                <option value="list">List</option>
             </select>
         </div>
 
@@ -23,6 +22,7 @@
                         <th>Email Address</th>
                         <th>Phone Number</th>
                         <th>Other Details</th>
+                        <th>Full Details</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -33,6 +33,9 @@
                             <td>@staff.EmailAddress</td>
                             <td>@staff.PhoneNumber</td>
                             <td>@staff.OtherDetails</td>
+                            <td>
+                                @staff.FullDetails
+                            </td>
                         </tr>
                     }
                 </tbody>
@@ -47,7 +50,8 @@
                         <strong>ID:</strong> @staff.StaffId<br>
                         <strong>Email:</strong> @staff.EmailAddress<br>
                         <strong>Phone:</strong> @staff.PhoneNumber<br>
-                        <strong>Details:</strong> @staff.OtherDetails
+                        <strong>Details:</strong> @staff.OtherDetails<br>
+                        <strong>Full Details:</strong> @staff.FullDetails
                     </li>
                 }
             </ul>
